add: 异步数据存取策略

--- a/issues/异步数据优化策略.md
+++ b/issues/异步数据优化策略.md
@@ -133,6 +133,6 @@ function sleep (ms){
 }
 ```
 
-这样，即使有并发的数据读取，也会只做一次网络请求。后续的会复用第一次的promise。 得到值之后直接执行相关操作
+这样，即使有并发的数据读取，也会只做一次网络请求。后续的会复用第一次的promise。 得到值之后会在第一时间把数据吐出去.
 
 
